option optimize_for = SPEED;
option java_package = "pipe.election";

// enquire about the state of the leader/election
message LeaderStatus {
   required LeaderQuery action = 1;
   optional LeaderState state = 2;
   optional string leader_host= 3;
   optional int32 leader_id = 4;

   optional int64 election_id = 5;

   enum LeaderState {
      LEADERUNKNOWN = 1;
      LEADERALIVE = 2;
      LEADERDEAD = 3;
   }

   enum LeaderQuery {
      WHOISTHELEADER = 1;
      THELEADERIS = 2;
   }
}

message LeaderElection{

   required int64 election_id = 2;
   required int32 candidate_id = 3;
   required ElectAction action = 5;

   optional int64 expires = 6 [default = -1];
   optional int32 hops = 7 [default = -1];

   enum ElectAction {
      DECLAREELECTION = 1;
      PROPOSAL = 2;
      NOMINATE = 3;
      DECLAREWINNER = 4;
      DECLAREVOID = 5;
   }
}
