option optimize_for = SPEED;
option java_package = "routing";

import "common.proto";
import "filedata.proto";

message CommandMessage {
   required Header header = 1;

    oneof payload {
      // a client (external) sanity check for testing
      bool ping = 3;

      string message = 4;
      
      Failure err = 5;
   }
   optional FileDataInfo data = 6;
   optional bool retrieve = 7;
   optional bool save = 8;
   optional string username = 9;
}
